<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/delta_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_bg" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delta_logo_iv"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:id="@+id/connect_title_tv"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:textSize="36sp"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:text="@string/connect_server"
          />

        <TextView
            android:id="@+id/describe_tv"
            style="@style/DescripeTextViewStyle"
            android:layout_width="wrap_content"

            android:layout_below="@id/connect_title_tv"
            android:layout_marginTop="8dp"
            android:text="@string/connect_server_ip"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_ignore"
            style="@style/BlueTextViewStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/connect_title_tv"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/describe_tv"
            android:text="@string/skip"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tv_web_server_title"
            style="@style/BlueTextViewStyle"
            android:layout_width="match_parent"
            android:layout_below="@+id/describe_tv"
            android:layout_marginTop="32dp"
            android:paddingLeft="10dp"
            android:text="@string/connect_server_web_server" />

        <EditText
            android:id="@+id/et_web_server"
            style="@style/EditTextStyle"
            android:layout_below="@+id/tv_web_server_title"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_webserverurl"
            android:drawablePadding="12dip"
            android:hint="@string/connect_server_web_server"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_mqtt_server_title"
            style="@style/BlueTextViewStyle"
            android:layout_width="match_parent"
            android:layout_below="@+id/et_web_server"

            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/connect_server_mqtt_server" />

        <EditText
            android:id="@+id/et_mqtt_server"
            style="@style/EditTextStyle"
            android:layout_below="@+id/tv_mqtt_server_title"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_webserverurl"
            android:drawablePadding="12dip"
            android:hint="@string/connect_server_mqtt_server"
            android:textSize="13sp" />

       <Spinner
           android:id="@+id/oidc_spinner"
           android:layout_below="@+id/et_mqtt_server"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>


        <TextView
            android:enabled="false"
            android:id="@id/connect_tv"
            style="@style/ConfirmButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/et_mqtt_server"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/connect"
           android:background="@color/confirm_button_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/view_left"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/connect_tv"
            android:layout_marginTop="35dp"
            android:layout_toLeftOf="@+id/or_tv"
            android:background="?attr/EditTextHintColor" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connect_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="OR"
            android:textColor="?attr/EditTextHintColor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/connect_tv"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/or_tv"
            android:layout_marginTop="35dp"
            android:background="?attr/EditTextHintColor" />

        <TextView
            android:id="@+id/qrcode_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/view_left"
            android:layout_marginTop="35dp"
            android:background="?attr/primaryBlueColor"
            android:gravity="center"
            android:text="@string/scan_server_qrcode"
            android:textColor="#FAFAFA"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        style="@style/NormalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:lineSpacingExtra="3dp"
        android:singleLine="false"
        android:text="@string/copyright_statement" />

</RelativeLayout>